# rookiedb-rs

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/database/: databox.rs  index.rs  io.rs  mod.rs  table.rs
src/database/databox/: datatype.rs  mod.rs  typeid.rs
